fix(input): fixes alignment between datepicker and other input elements
closes #5936

--- a/src/components/datepicker/datePicker.scss
+++ b/src/components/datepicker/datePicker.scss
@@ -12,11 +12,13 @@ md-datepicker {
   // Leave room for the down-triangle button to "overflow" it's parent without modifying scrollLeft
   padding-right: $md-datepicker-triangle-button-width / 2;
   margin-right: -$md-datepicker-triangle-button-width / 2;
+
+  vertical-align: middle;
 }
 
 .md-inline-form {
   md-datepicker {
-    margin-top: 8px;
+    margin-top: 12px;
   }
 }
 
